--- a/main.css
+++ b/main.css
@@ -4,7 +4,6 @@ body {
 
 html,
 body {
-  /*background-color: changs this color;*/
   height: 100%;
   margin: 0;
   background-color:  #FC6969;
@@ -13,12 +12,25 @@ body {
 h2, h3 {
   font-size: 5.25rem;
   margin: 30px 0;
+  padding: 30px;
 }
 
 .landing-page {
   width: 100%;
   height: 100%;
+  display: block;
   font-family: 'Amatic SC', cursive;
+}
+
+#arrow-icon {
+  /*border: 1px solid black;*/
+  padding: 20px 40px 20px 40px;
+
+}
+
+.fas {
+  font-size: 2.8rem;
+  color: white;
 }
 
 /*.container {
@@ -50,16 +62,7 @@ h2, h3 {
 
 #last-intro {
   color: #FFBA49;
-}
-
-/*#time {
-  margin-top: 0;
-  margin-bottom: 0;
-}*/
-
-.fas {
-  font-size: 2.8rem;
-  color: white;
+  font-size: 6rem;
 }
 
 
@@ -76,9 +79,9 @@ h2, h3 {
   border-radius: 50px 50px 0 0px;
   z-index: 3;
   overflow: hidden;
-}
+}*/
 
-.down i {
+/*.down i {
   position: relative;
   display: table-cell;
   vertical-align: middle;
