--- a/main.css
+++ b/main.css
@@ -22,9 +22,22 @@ h2, h3 {
   font-family: 'Amatic SC', cursive;
 }
 
+/*.landing-page:after {
+  position: absolute;
+  content: "";
+  width: 100%;
+  height: 100%;
+  left: 0;
+  top: 0;
+  background: #000;
+  opacity: 0.85;
+  z-index: 1;
+}*/
+
 #arrow-icon {
   /*border: 1px solid black;*/
-  padding: 20px 40px 20px 40px;
+  padding: 20px;
+  text-align: center;
 
 }
 
@@ -67,19 +80,23 @@ h2, h3 {
 
 
 /*TODO: FIX ARROW*/
-/*.down {
-  position: absolute;
+#arrow-down i {
+  margin: 0 auto;
+  padding: 10px 30px;
+  vertical-align: middle;
+  text-align: center;
+  /*position: absolute;
+  text-align:center;
   display: table;
   width: 100px;
   height: 50px;
   background: rgba(175, 175, 175, 0.2);
   left: 50%;
-  bottom: 0;
   margin-left: -50px;
   border-radius: 50px 50px 0 0px;
   z-index: 3;
-  overflow: hidden;
-}*/
+  overflow: hidden;*/
+}
 
 /*.down i {
   position: relative;
@@ -103,14 +120,4 @@ h2, h3 {
   display: table;
 }
 
-.landing-page:after {
-  position: absolute;
-  content: "";
-  width: 100%;
-  height: 100%;
-  left: 0;
-  top: 0;
-  background: #000;
-  opacity: 0.85;
-  z-index: 1;
-}*/
+
